fixed resolution issues on smaller monitors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,7 +49,7 @@ section {
 }
 
 section h1 {
-  font-size: 7rem;
+  font-size: 3.5rem;
 }
 
 section#home {
@@ -81,9 +81,10 @@ section#contact {
   display:flex;
   align-items: center;
   justify-content: center;
-  width: 11.5rem;
+  width: 9.5rem;
   height: 100%;
   background: rgba(0,0,0,0.7);  
+  font-size: 1rem;
 }
 
 .navbar ul {
@@ -93,7 +94,7 @@ section#contact {
 }
 
 .navbar ul li {
-  margin: 0 1rem;
+  margin: 0 5%;
   padding: 3rem 1rem;
 }
 
